syntax = "proto3";
package jaegerGoTest;
option go_package = "github.com/miparnisari/jaegerGoTest";

import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

message StreamedGetStoreRequest {
  string store_id = 1 [
    json_name = "store_id",
    (validate.rules).string = {pattern: "^[ABCDEFGHJKMNPQRSTVWXYZ0-9]{26}$"}
  ];
}

message StreamedGetStoreResponse {
  int32 value = 1;
}

service JaegerGoTest {
  rpc StreamedGetStoreID(StreamedGetStoreRequest) returns (stream StreamedGetStoreResponse) {
    option (google.api.http) = {
      get: "/streamed"
    };
  }
}